--- a/OSELAS.BSP-EnergyMicro-Gecko/local_src/game-1.0/Makefile
+++ b/OSELAS.BSP-EnergyMicro-Gecko/local_src/game-1.0/Makefile
@@ -6,14 +6,15 @@
 # add more flags here,
 # but don't remove the "+="
 #
-CFLAGS += -O2 -g -Wall #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
+CFLAGS += -std=gnu99 -O2 -g -Wall #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
+LDLIBS += -lm
 CPPFLAGS +=
 LDFLAGS +=
 
 
 all: game
 
-game: framebuffer_painter.o
+game: framebuffer_painter.o graphic_engine.o breakout.o
 
 clean:
 	-rm -f game
